--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
     <title>Verificación Cuevas</title>
 </head>
 <body>
+    <header class="c-header">
+        <div class="c-header__logo">
+        </div>
+        <nav class="c-header__navbar">
+            <ul class="c-header__list">
+                <li class="c-header__item"><a href="#" class="c-header__link">Verifica</a></li>
+                <li class="c-header__item"><a href="#" class="c-header__link">Calendario</a></li>
+                <li class="c-header__item"><a href="#" class="c-header__link">Beneficios</a></li>
+                <li class="c-header__item"><a href="#" class="c-header__link">Medio Ambiente</a></li>
+                <li class="c-header__item"><a href="#" class="c-header__link">Preguntas frecuentes</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
