Added basic hero component styles

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
             </ul>
         </nav>
     </header>
+    <section class="c-hero">
+        <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
+        <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
+        <a class="c-hero__cta" href="#">Agenda una cita</a>
+    </section>
 </body>
 </html>
