Added wrapper util

--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 </head>
 <body>
     <header class="c-header">
-        <div class="c-header__logo">
+        <div class="u-wrapper">
+            <div class="c-header__logo">
+            </div>
+            <nav class="c-header__navbar">
+                <ul class="c-header__list">
+                    <li class="c-header__item"><a href="#" class="c-header__link">Verifica</a></li>
+                    <li class="c-header__item"><a href="#" class="c-header__link">Calendario</a></li>
+                    <li class="c-header__item"><a href="#" class="c-header__link">Beneficios</a></li>
+                    <li class="c-header__item"><a href="#" class="c-header__link">Medio Ambiente</a></li>
+                    <li class="c-header__item"><a href="#" class="c-header__link">Preguntas frecuentes</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="c-header__navbar">
-            <ul class="c-header__list">
-                <li class="c-header__item"><a href="#" class="c-header__link">Verifica</a></li>
-                <li class="c-header__item"><a href="#" class="c-header__link">Calendario</a></li>
-                <li class="c-header__item"><a href="#" class="c-header__link">Beneficios</a></li>
-                <li class="c-header__item"><a href="#" class="c-header__link">Medio Ambiente</a></li>
-                <li class="c-header__item"><a href="#" class="c-header__link">Preguntas frecuentes</a></li>
-            </ul>
-        </nav>
     </header>
     <section class="c-hero">
-        <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
-        <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
-        <a class="c-hero__cta" href="#">Agenda una cita</a>
+        <div class="u-wrapper">
+            <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
+            <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
+            <a class="c-hero__cta" href="#">Agenda una cita</a>
+        </div>
     </section>
 </body>
 </html>
