Created calendar component

--- a/index.html
+++ b/index.html
@@ -31,5 +31,30 @@
             <a class="c-hero__cta" href="#">Agenda una cita</a>
         </div>
     </section>
+    <section>
+        <div class="u-wrapper">
+            <div class="c-calendar">
+                <div class="c-calendar__cell c-calendar__cell--heading">Terminación de Placas</div>
+                <div class="c-calendar__cell c-calendar__cell--heading">Primer Periodo</div>
+                <div class="c-calendar__cell c-calendar__cell--heading">Segundo Periodo</div>
+                <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--yellow">5 y 6</div>
+                <div class="c-calendar__cell">Enero - Febrero</div>
+                <div class="c-calendar__cell">Julio - Agosto</div>
+                <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--pink">7 y 8</div>
+                <div class="c-calendar__cell">Febrero - Marzo</div>
+                <div class="c-calendar__cell">Agosto - Septiembre</div>
+                <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--red">3 y 4</div>
+                <div class="c-calendar__cell">Marzo - Abril</div>
+                <div class="c-calendar__cell">Septiembre - Octubre</div>
+                <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--green">1 y 2</div>
+                <div class="c-calendar__cell">Abril - Mayo</div>
+                <div class="c-calendar__cell">Octubre - Noviembre</div>
+                <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--blue">9 y 0</div>
+                <div class="c-calendar__cell">Mayo - Junio</div>
+                <div class="c-calendar__cell">Noviembre - Diciembre</div>
+            </div>
+            <div class="c-map"></div>
+        </div>
+    </section>
 </body>
 </html>
