refactored cta to be a component

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         <div class="u-wrapper">
             <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
             <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
-            <a class="c-hero__cta" href="#">Agenda una cita</a>
+            <a class="c-cta c-cta--big" href="#">Agenda una cita</a>
         </div>
     </section>
     <section>
         <div class="u-wrapper">
+            <h1 class="c-heading">¿Cuando debo verificar?</h1>
             <div class="c-calendar">
                 <div class="c-calendar__cell c-calendar__cell--heading">Terminación de Placas</div>
                 <div class="c-calendar__cell c-calendar__cell--heading">Primer Periodo</div>
@@ -52,6 +53,9 @@
                 <div class="c-calendar__cell c-calendar__cell--plate c-calendar__cell--blue">9 y 0</div>
                 <div class="c-calendar__cell">Mayo - Junio</div>
                 <div class="c-calendar__cell">Noviembre - Diciembre</div>
+            </div>
+            <div class="c-cta">
+
             </div>
             <div class="c-map"></div>
         </div>
