Added cta to calendar section & created centerer util

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div class="c-calendar__cell">Mayo - Junio</div>
                 <div class="c-calendar__cell">Noviembre - Diciembre</div>
             </div>
-            <div class="c-cta">
-
+            <div class="u-centerer">
+                <a class="c-cta" href="#">Quiero verificar</a>
             </div>
             <div class="c-map"></div>
         </div>
