refactored util centerer to arranger

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="c-cta c-cta--big" href="#">Agenda una cita</a>
         </div>
     </section>
-    <section>
+    <section id="calendario">
         <div class="u-wrapper">
             <h1 class="c-heading">¿Cuando debo verificar?</h1>
             <div class="c-calendar">
@@ -54,10 +54,9 @@
                 <div class="c-calendar__cell">Mayo - Junio</div>
                 <div class="c-calendar__cell">Noviembre - Diciembre</div>
             </div>
-            <div class="u-centerer">
+            <div class="u-arranger u-arranger--center">
                 <a class="c-cta" href="#">Quiero verificar</a>
             </div>
-            <div class="c-map"></div>
         </div>
     </section>
 </body>
