Created benefits component

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section id="calendario">
         <div class="u-wrapper">
-            <h1 class="c-heading">¿Cuando debo verificar?</h1>
+            <h2 class="c-heading">¿Cuando debo verificar?</h2>
             <div class="c-calendar">
                 <div class="c-calendar__cell c-calendar__cell--heading">Terminación de Placas</div>
                 <div class="c-calendar__cell c-calendar__cell--heading">Primer Periodo</div>
@@ -56,6 +56,60 @@
             </div>
             <div class="u-arranger u-arranger--center">
                 <a class="c-cta" href="#">Quiero verificar</a>
+            </div>
+        </div>
+    </section>
+    <section id="beneficios">
+        <div class="u-wrapper">
+            <h2 class="c-heading">¿Por qué verificar?</h2>
+            <div class="u-arranger u-arranger--divide">
+                <div class="c-benefits">
+                    <h3 class="c-benefits__title">Verificando cuidas tu patrimonio</h3>
+                    <div class="c-benefits__list">
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">1</div>
+                            <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$1509.80</p>
+                            <p class="c-benefits__list-item__text"><strong>Multa ambiental.</strong> Por no portar el holograma de verificación (A partir de 1º de Julio)</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">2</div>
+                            <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$830.39</p>
+                            <p class="c-benefits__list-item__text"><strong>Infracción de tránsito.</strong> Por no portar el holograma de verificación (Vigente)</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--total">Total:</div>
+                            <p class="c-benefits__list-item__title c-benefits__list-item__title--total">$2340.19 M.N.</p>
+                        </div>
+                    </div>
+                    <p class="c-benefits__alert">Evita ser multado</p>
+                    <div class="u-arranger u-arranger--center">
+                        <a href="#" class="c-cta">Agendar cita</a>
+                    </div>
+                </div>
+                <div class="c-benefits">
+                    <h3 class="c-benefits__title">Beneficios de verificar</h3>
+                    <div class="c-benefits__list">
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">1</div>
+                            <p class="c-benefits__list-item__title">Evitas gastos mayores de mantenimiento de tu vehículo.</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">2</div>
+                            <p class="c-benefits__list-item__title">Evitas ser infraccionado por no portar el holograma respectivo.</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">3</div>
+                            <p class="c-benefits__list-item__title">Aumentas la vida útil de tu vehiculo afinandolo periodicamente.</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">4</div>
+                            <p class="c-benefits__list-item__title">Ayudas al medio ambiente.</p>
+                        </div>
+                    </div>
+                    <div class="u-arranger u-arranger--center">
+                        <a href="#" class="c-cta">Agendar cita</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
