--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="c-heading">¿Por qué verificar?</h2>
             <div class="u-arranger u-arranger--divide">
                 <div class="c-benefits">
-                    <h3 class="c-benefits__title">Verificando cuidas tu patrimonio</h3>
+                    <h3 class="c-benefits__title c-benefits__title--money">Verificando cuidas tu patrimonio</h3>
                     <div class="c-benefits__list">
                         <div class="c-benefits__list-item">
                             <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">1</div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta">Agendar cita</a>
+                        <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
                     </div>
                 </div>
             </div>
