--- a/index.html
+++ b/index.html
@@ -125,7 +125,38 @@
                         </div>
                         <div class="c-benefits__list-item">
                             <div class="c-benefits__list-item__bullet">2</div>
-                            <p class="c-benefits__list-item__title">Apoyas proyextos de desarrollo para concervar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
+                            <p class="c-benefits__list-item__title">Apoyas proyextos de desarrollo para conservar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
+                        </div>
+                    </div>
+                    <div class="u-arranger u-arranger--center">
+                        <a href="#" class="c-cta c-cta">Quiero Apoyar</a>
+                        <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="guacamaya">
+        <div class="u-wrapper">
+            <div class="u-arranger u-arranger--left">
+                <div class="c-benefits">
+                    <h3 class="c-benefits__title">Al verificar estás apoyando a proyectos que fortalecen y promueven</h3>
+                    <div class="c-benefits__list">
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">1</div>
+                            <p class="c-benefits__list-item__title">Restauración y Reconservación productiva</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">2</div>
+                            <p class="c-benefits__list-item__title">Reforestación</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">3</div>
+                            <p class="c-benefits__list-item__title">Restauración, Conservación y Monitoreo</p>
+                        </div>
+                        <div class="c-benefits__list-item">
+                            <div class="c-benefits__list-item__bullet">4</div>
+                            <p class="c-benefits__list-item__title">Actividades alternativas</p>
                         </div>
                     </div>
                     <div class="u-arranger u-arranger--center">
