--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                         </div>
                     </div>
                     <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta c-cta">Quiero Apoyar</a>
-                        <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
+                        <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
+                        <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                     </div>
                 </div>
             </div>
@@ -160,8 +160,8 @@
                         </div>
                     </div>
                     <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta c-cta">Quiero Apoyar</a>
-                        <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
+                        <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
+                        <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                     </div>
                 </div>
             </div>
