Created map component

--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
             </div>
         </div>
     </section>
+    <section id="contacto">
+        <div class="u-wrapper">
+            <h2 class="c-heading">¿Dónde puedo verificar?</h2>
+            <div class="c-map">
+                <h3 class="c-map__title">Centro de Verificación Vehicular Autorizado C-XL-O2</h3>
+                <p class="c-map__address">Ma. Enriqueta Camarillo #6. Col. Rafael Lucio. Xalapa, Ver.</p>
+                <div class="u-arranger u-arranger--center">
+                    <a class="c-map__link" href="tel:2288156209">Tel: 8-15-62-09</a>
+                    <a class="c-map__link" href="mailto:verificacioncuevas@gmail.com">Correo: verificacioncuevas@gmail.com</a>
+                </div>
+                <div class="c-map__area">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3759.559590617052!2d-96.92843418455355!3d19.560512586811786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31df4ea00f9f%3A0xffb9dc8f7e8210cf!2sCentro%20de%20Verificaci%C3%B3n%20Vehicular%20Autorizado%20C-XL-02!5e0!3m2!1ses!2smx!4v1573581227151!5m2!1ses!2smx" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+                <div class="u-arranger u-arranger--center">
+                    <a href="#" class="c-cta">Quiero agendar</a>
+                    <a href="https://www.google.com/maps/dir//19.5605126,-96.9262455/@19.560513,-96.926245,16z?hl=es" class="c-cta c-cta--hollow">¿Cómo llegar?</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="beneficios">
         <div class="u-wrapper">
             <h2 class="c-heading">¿Por qué verificar?</h2>
