Added que-es section html structure

--- a/index.html
+++ b/index.html
@@ -31,6 +31,37 @@
             <a class="c-cta c-cta--big" href="#">Agenda una cita</a>
         </div>
     </section>
+    <section id="que-es">
+        <div class="u-wrapper">
+            <h2 class="c-heading">¿Qué es la verificación vehicular?</h2>
+            <div class="c-info">
+                <div class="c-info__column">
+                    <p class="c-info__text">Es la medición de las emisiones contaminantes a la atmósfera provenientes de vehículos automotores. Es una actividad de control de la contaminación atmosférica que se realiza en diversas partes del mundo.</p>
+                    <p class="c-info__text">El objetivo de la verificación vehñicular es reducir al máximo las emisiones contaminantes de los vehículos en circulación.</p>
+                </div>
+                <div class="c-info__column">
+                    <div class="c-benefits">
+                        <h3 class="c-benefits__title c-benefits__title">En nuestro centro te ofrecemos los siguientes servicios de verificación:</h3>
+                        <div class="c-benefits__list">
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet">1</div>
+                                <p class="c-benefits__list-item__title c-benefits__list-item__title">Estática</p>
+                                <p class="c-benefits__list-item__text">Para aquellos vehículos que por sus características del fabricante no puedan ser subidos al dinamómetro.</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet">2</div>
+                                <p class="c-benefits__list-item__title c-benefits__list-item__title">Diesel</p>
+                                <p class="c-benefits__list-item__text">Será inspeccionada la composición de las emisiones de los automotores a diésel, sin importar su año, mode o peso, mediante un opacimetro.</p>
+                            </div>
+                        </div>
+                        <div class="u-arranger u-arranger--center">
+                            <a href="#" class="c-cta">Agendar cita</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="calendario">
         <div class="u-wrapper">
             <h2 class="c-heading">¿Cuando debo verificar?</h2>
