Created container util & re-arranged some html to match the new specification

--- a/index.html
+++ b/index.html
@@ -114,51 +114,55 @@
         <div class="u-wrapper">
             <h2 class="c-heading">¿Por qué verificar?</h2>
             <div class="u-arranger u-arranger--divide">
-                <div class="c-benefits">
-                    <h3 class="c-benefits__title c-benefits__title--money">Verificando cuidas tu patrimonio</h3>
-                    <div class="c-benefits__list">
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">1</div>
-                            <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$1509.80</p>
-                            <p class="c-benefits__list-item__text"><strong>Multa ambiental.</strong> Por no portar el holograma de verificación (A partir de 1º de Julio)</p>
+                <div class="u-container u-container--half">
+                    <div class="c-benefits">
+                        <h3 class="c-benefits__title c-benefits__title--money">Verificando cuidas tu patrimonio</h3>
+                        <div class="c-benefits__list">
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">1</div>
+                                <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$1509.80</p>
+                                <p class="c-benefits__list-item__text"><strong>Multa ambiental.</strong> Por no portar el holograma de verificación (A partir de 1º de Julio)</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">2</div>
+                                <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$830.39</p>
+                                <p class="c-benefits__list-item__text"><strong>Infracción de tránsito.</strong> Por no portar el holograma de verificación (Vigente)</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--total">Total:</div>
+                                <p class="c-benefits__list-item__title c-benefits__list-item__title--total">$2340.19 M.N.</p>
+                            </div>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--money">2</div>
-                            <p class="c-benefits__list-item__title c-benefits__list-item__title--money">$830.39</p>
-                            <p class="c-benefits__list-item__text"><strong>Infracción de tránsito.</strong> Por no portar el holograma de verificación (Vigente)</p>
+                        <p class="c-benefits__alert">Evita ser multado</p>
+                        <div class="u-arranger u-arranger--center">
+                            <a href="#" class="c-cta">Agendar cita</a>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet--total">Total:</div>
-                            <p class="c-benefits__list-item__title c-benefits__list-item__title--total">$2340.19 M.N.</p>
-                        </div>
-                    </div>
-                    <p class="c-benefits__alert">Evita ser multado</p>
-                    <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta">Agendar cita</a>
                     </div>
                 </div>
-                <div class="c-benefits">
-                    <h3 class="c-benefits__title">Beneficios de verificar</h3>
-                    <div class="c-benefits__list">
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">1</div>
-                            <p class="c-benefits__list-item__title">Evitas gastos mayores de mantenimiento de tu vehículo.</p>
+                <div class="u-container u-container--half">
+                    <div class="c-benefits">
+                        <h3 class="c-benefits__title">Beneficios de verificar</h3>
+                        <div class="c-benefits__list">
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">1</div>
+                                <p class="c-benefits__list-item__title">Evitas gastos mayores de mantenimiento de tu vehículo.</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">2</div>
+                                <p class="c-benefits__list-item__title">Evitas ser infraccionado por no portar el holograma respectivo.</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">3</div>
+                                <p class="c-benefits__list-item__title">Aumentas la vida útil de tu vehiculo afinandolo periodicamente.</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">4</div>
+                                <p class="c-benefits__list-item__title">Ayudas al medio ambiente.</p>
+                            </div>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">2</div>
-                            <p class="c-benefits__list-item__title">Evitas ser infraccionado por no portar el holograma respectivo.</p>
+                        <div class="u-arranger u-arranger--center">
+                            <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">3</div>
-                            <p class="c-benefits__list-item__title">Aumentas la vida útil de tu vehiculo afinandolo periodicamente.</p>
-                        </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">4</div>
-                            <p class="c-benefits__list-item__title">Ayudas al medio ambiente.</p>
-                        </div>
-                    </div>
-                    <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
                     </div>
                 </div>
             </div>
@@ -167,21 +171,23 @@
     <section id="tortuga">
         <div class="u-wrapper">
             <div class="u-arranger u-arranger--divide">
-                <div class="c-benefits">
-                    <h3 class="c-benefits__title">Verificando ayudas doblemente al medio ambiente</h3>
-                    <div class="c-benefits__list">
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">1</div>
-                            <p class="c-benefits__list-item__title">Disminuyes las emisiones de gases contaminantes.</p>
+                <div class="u-container u-container--half">
+                    <div class="c-benefits">
+                        <h3 class="c-benefits__title">Verificando ayudas doblemente al medio ambiente</h3>
+                        <div class="c-benefits__list">
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">1</div>
+                                <p class="c-benefits__list-item__title">Disminuyes las emisiones de gases contaminantes.</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">2</div>
+                                <p class="c-benefits__list-item__title">Apoyas proyextos de desarrollo para conservar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
+                            </div>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">2</div>
-                            <p class="c-benefits__list-item__title">Apoyas proyextos de desarrollo para conservar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
+                        <div class="u-arranger u-arranger--center">
+                            <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
+                            <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                         </div>
-                    </div>
-                    <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
-                        <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                     </div>
                 </div>
             </div>
@@ -190,30 +196,32 @@
     <section id="guacamaya">
         <div class="u-wrapper">
             <div class="u-arranger u-arranger--left">
-                <div class="c-benefits">
-                    <h3 class="c-benefits__title">Al verificar estás apoyando a proyectos que fortalecen y promueven</h3>
-                    <div class="c-benefits__list">
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">1</div>
-                            <p class="c-benefits__list-item__title">Restauración y Reconservación productiva</p>
+                <div class="u-container u-container--half">
+                    <div class="c-benefits">
+                        <h3 class="c-benefits__title">Al verificar estás apoyando a proyectos que fortalecen y promueven</h3>
+                        <div class="c-benefits__list">
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">1</div>
+                                <p class="c-benefits__list-item__title">Restauración y Reconservación productiva</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">2</div>
+                                <p class="c-benefits__list-item__title">Reforestación</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">3</div>
+                                <p class="c-benefits__list-item__title">Restauración, Conservación y Monitoreo</p>
+                            </div>
+                            <div class="c-benefits__list-item">
+                                <div class="c-benefits__list-item__bullet">4</div>
+                                <p class="c-benefits__list-item__title">Actividades alternativas</p>
+                            </div>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">2</div>
-                            <p class="c-benefits__list-item__title">Reforestación</p>
+                        <div class="u-arranger u-arranger--center">
+                            <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
+                            <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                         </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">3</div>
-                            <p class="c-benefits__list-item__title">Restauración, Conservación y Monitoreo</p>
-                        </div>
-                        <div class="c-benefits__list-item">
-                            <div class="c-benefits__list-item__bullet">4</div>
-                            <p class="c-benefits__list-item__title">Actividades alternativas</p>
-                        </div>
-                    </div>
-                    <div class="u-arranger u-arranger--center">
-                        <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
-                        <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
