Added info component

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             <div class="c-info">
                 <div class="c-info__column">
                     <p class="c-info__text">Es la medición de las emisiones contaminantes a la atmósfera provenientes de vehículos automotores. Es una actividad de control de la contaminación atmosférica que se realiza en diversas partes del mundo.</p>
-                    <p class="c-info__text">El objetivo de la verificación vehñicular es reducir al máximo las emisiones contaminantes de los vehículos en circulación.</p>
+                    <p class="c-info__text">El objetivo de la verificación vehícular es reducir al máximo las emisiones contaminantes de los vehículos en circulación.</p>
+                    <img src="./img/speedometer.svg" alt="" class="c-info__icon">
                 </div>
                 <div class="c-info__column">
-                    <div class="c-benefits">
+                    <div class="c-benefits c-benefits--no-shadow">
                         <h3 class="c-benefits__title c-benefits__title">En nuestro centro te ofrecemos los siguientes servicios de verificación:</h3>
                         <div class="c-benefits__list">
                             <div class="c-benefits__list-item">
