Added preguntas section & faqs component

--- a/index.html
+++ b/index.html
@@ -227,5 +227,23 @@
             </div>
         </div>
     </section>
+    <section id="preguntas">
+        <div class="u-wrapper">
+            <h2 class="c-heading">¿Tienes dudas?</h2>
+            <div class="c-faqs">
+                <h3 class="c-faqs__question">¿Por qué es importante verificar mi vehículo?</h3>
+                <p class="c-faqs__answer">Contribuyes a la mejora en la salud y el bienestar de las personas. Reduces las emiciones contaminantes de los vehículos en circulación e incentivas la introducción de tecnologías y combustibles menos contaminantes.</p>
+                <h3 class="c-faqs__question">¿Quiénes tienen que verificar su vehículo?</h3>
+                <p class="c-faqs__answer">Todos los propietarios o conductores de vehículos automotores de servicio público o privado en circulación matriculados en el estado de Veracruz.</p>
+                <h3 class="c-faqs__question">¿Qué tipo de holograma puedo obtener?</h3>
+                <p class="c-faqs__answer">En nuestro centro, dependiendo tu vehículo podrás obtener un <strong>Hologram Estatal E</strong> si tu vehículo se verificó a través de prueba estática u <strong>Holograma Estatal D</strong> si tu vehículo se verificó a través de prueba por opacidad.</p>
+                <h3 class="c-faqs__question">¿Cuál es el costo de la verificación?</h3>
+                <p class="c-faqs__answer">La prueba de verificación tieneu un consto único de <strong>$365.20 M.N.</strong></p>
+                <div class="u-arranger u-arranger--center">
+                    <a href="#" class="c-cta">Quiero verificar</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
