--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="u-wrapper">
             <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
             <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
-            <a class="c-cta c-cta--big" href="#">Agenda una cita</a>
+            <a class="c-cta c-cta--big" href="#verifica">Agenda una cita</a>
         </div>
     </section>
     <section id="que-es">
